--- a/samsung.refacco.ApplicationSystem/samsung.refacco.ApplicationSystem.csproj
+++ b/samsung.refacco.ApplicationSystem/samsung.refacco.ApplicationSystem.csproj
@@ -66,6 +66,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Registros.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,6 +89,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Registros.resx">
       <DependentUpon>Registros.cs</DependentUpon>
@@ -103,9 +109,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Imagens\delivery_man_parcel.png" />
+    <Content Include="Imagens\IconMonitoring.png" />
+    <Content Include="Imagens\IconPartilhar.png" />
     <Content Include="Imagens\Logo.png" />
     <Content Include="Imagens\maximize.png" />
     <Content Include="Imagens\MenuMobile.png" />
+    <None Include="Imagens\MenuMobile1.png" />
     <Content Include="Imagens\mini.png" />
     <Content Include="Imagens\minimize-icon-png-3.png" />
     <Content Include="Imagens\Monitoring.png" />
