--- a/samsung.refacco.Repository/samsung.refacco.Repository.csproj
+++ b/samsung.refacco.Repository/samsung.refacco.Repository.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entidades\Produtos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\RepositoriesPanel.cs" />
   </ItemGroup>
